<resources>
    <string name="app_name">Bear Shop</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="welcome_to_bear_shop">Chào mừng đến với BEAR SHOP</string>
    <string name="user_name">Nhập tên tài khoản</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="save_pass">Ghi nhớ mật khẩu đăng nhập</string>
    <string name="for_got_pass">Quên mật khẩu?</string>
    <string name="create_new_acc">Đăng ký tài khoản?</string>
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="history">Lịch sử</string>
    <string name="add">Thêm</string>
    <string name="search">Tìm kiếm</string>
    <string name="all">Tất cả</string>
    <string name="total_pay">Tổng thanh toán</string>
    <string name="buy_product">Mua hàng</string>
    <string name="user_profile">Thông tin cá nhân</string>
    <string name="delivery_address">Địa chỉ giao hàng</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="log_out">Đăng xuất</string>
    <string name="add_delivery_address">Thêm địa chỉ</string>
    <string name="btn_buy_now">Mua ngay</string>
    <string name="add_to_cart_success">Thêm vào giỏ hàng thành công</string>
    <string name="cancel_add_to_cart_success">Đã huỷ thêm vào giỏ hàng</string>
    <string name="number">Số lượng</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="cancel_order_success">Huỷ Đặt hàng thành công</string>
    <string name="buy_with_price">Mua với giá</string>
    <string name="status">Trạng Thái</string>
    <string name="delivering">Đang giao hàng</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Huỷ</string>
    <string name="confirm_add_to_cart">Xác nhận thêm vào giỏ hàng</string>
    <string name="confirm_buy_product">Xác nhận mua hàng</string>
    <string name="confirm_del_product_in_cart">Xác nhận xoá sản phẩm trong giỏ hàng</string>
    <string name="warning_empty_cart">OOPS! giỏ hàng bạn đang trống</string>
    <string name="warning_order_empty">OOPS! bạn không có đơn hàng nào</string>
    <string name="new_name">Nhập tên mới</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="new_email">Nhập email mới</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="new_number_phone">Nhập số điện thoại mới</string>
    <string name="birthday">Ngày sinh</string>
    <string name="new_birthday">Chọn ngày sinh mới</string>
    <string name="choose_address">Chọn địa chỉ</string>
    <string name="address">Địa chỉ</string>
    <string name="address_detail">Địa chỉ chi tiết</string>
    <string name="enter_address_detail">Nhập địa chỉ chi tiết</string>
    <string name="enter_number_phone">Nhập số điện thoại</string>
    <string name="name_get_order">Tên người nhận hàng</string>
    <string name="enter_name_get_order">Nhập tên người nhận hàng</string>
    <string name="tv_address_default">Mặc định</string>
    <string name="set_address_default">Đặt làm địa chỉ mặc định</string>
    <string name="warning">Thông báo</string>
    <string name="do_you_want_exit_app">Bạn có muốn thoát ứng dụng không?</string>
    <string name="choose_province">Chọn Tỉnh</string>
    <string name="choose_district">Chọn Quận/Huyện</string>
    <string name="choose_ward">Chọn Xã</string>
    <string name="error">Error</string>
    <string name="error_get_province">Đã xảy ra lỗi khi lấy thông tin địa chỉ</string>
    <string name="ok">OK</string>
    <string name="product_information">Thông tin sản phẩm</string>
    <string name="please_choose_province">Vui lòng chọn Tỉnh</string>
    <string name="please_choose_district">Vui lòng chọn Quận/Huyện</string>
    <string name="no_data_2">OOPS! không có dữ liệu</string>
    <string name="please_enter">Vui lòng nhập %s</string>
    <string name="name_get_person_order">Tên người nhận hàng</string>
    <string name="please">Vui lòng %s</string>
    <string name="add_address_success">Đã thêm địa chỉ thành công</string>
    <string name="please_enter_username">Vui lòng nhập username</string>
    <string name="please_enter_pass">Vui lòng nhập password</string>
    <string name="dont_match_pass_or_username">Vui lòng kiểm tra lại tài khoản và mật khẩu</string>
    <string name="name_of_you">Tên của bạn</string>
    <string name="enter_your_name">Nhập tên của bạn</string>
    <string name="name_user_register">Tên tài khoản</string>
    <string name="password_register">Mật khẩu</string>
    <string name="enter_pass_again">Nhập lại mật khẩu</string>
    <string name="enter_email">Nhập email</string>
    <string name="choose_birthday">Chọn ngày sinh</string>
    <string name="register_success">Đã đăng ký thành công</string>
    <string name="please_enter_name">vui lòng nhập tên</string>
    <string name="please_enter_email">Vui lòng nhập email</string>
    <string name="plesase_enter_number_phone">Vui lòng nhập số điện thoại</string>
    <string name="please_choose_address">Vui lòng chọn địa chỉ</string>
    <string name="choose">Chọn</string>
    <string name="delete_product_in_cart">Đã xoá sản phẩm trong giỏ hàng</string>
    <string name="notification">Thông báo</string>
    <string name="confirm_delete_address">Bạn có chắc chắn muốn xoá địa chỉ này?</string>
    <string name="email_not_true">Email không hợp lệ</string>
    <string name="number_phone_not_true">Số điện thoại không hợp lệ</string>
    <string name="please_choose_birth">Vui lòng chọn ngày sinh</string>
    <string name="name_not_true">SĐộ dài từ 5 đến 20 ký tự Chỉ chứa chữ cái, số, dấu _</string>

</resources>