<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.utc.asm_mob_java.dialog.dialogeditprofile.DialogEditProfile" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="@dimen/dp_10"
            android:paddingVertical="@dimen/dp_5">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_toStartOf="@+id/img_close"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_20"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:importantForAccessibility="no"
                android:onClick="@{v -> presenter.onCancelClick()}"
                android:src="@drawable/ic_close" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16"
            tools:ignore="SpUsage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:background="@drawable/bg_edt"
            android:hint="@string/new_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/dp_5"
            android:paddingVertical="@dimen/dp_10"
            android:text="@={presenter.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16"
            tools:ignore="SpUsage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:background="@drawable/bg_edt"
            android:hint="@string/new_email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/dp_5"
            android:paddingVertical="@dimen/dp_10"
            android:text="@={presenter.email}"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/number_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16"
            tools:ignore="SpUsage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:background="@drawable/bg_edt"
            android:hint="@string/new_number_phone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="@dimen/dp_5"
            android:paddingVertical="@dimen/dp_10"
            android:text="@={presenter.numberPhone}"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:background="@drawable/bg_edt"
            android:importantForAutofill="no"
            android:paddingHorizontal="@dimen/dp_5"
            android:paddingVertical="@dimen/dp_10"
            android:text="@={presenter.birthday}"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_10"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:onClick="@{v -> presenter.onCancelClick()}"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_buy_now"
                android:onClick="@{v -> presenter.onConfirmClick()}"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/confirm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </LinearLayout>
</layout>