<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.utc.asm_mob_java.screen.registerscreen.RegisterPresenter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/img_close"
                    android:layout_toEndOf="@+id/img_close"
                    android:text="@string/signup"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_20"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:importantForAccessibility="no"
                    android:onClick="@{v -> presenter.onCancelClick()}"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ln_btn"
                android:layout_below="@+id/toolbar"
                android:layout_marginVertical="@dimen/dp_10"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/name_of_you"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/enter_your_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.name}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/birthday"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:onClick="@{v->presenter.onChooseDate()}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/choose_birthday"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@{presenter.birthday}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/name_user_register"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/user_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.username}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="TextFields" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/password_register"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:id="@+id/tv_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:drawableEnd="@{!presenter.isShowPass ? @drawable/ic_hide_pass : @drawable/ic_show_pass}"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.pass}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/enter_pass_again"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:id="@+id/tv_pass_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:drawableEnd="@{!presenter.isShowPassAgain ? @drawable/ic_hide_pass : @drawable/ic_show_pass}"
                        android:hint="@string/enter_pass_again"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.passAgain}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/number_phone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/enter_number_phone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.phone}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="TextFields" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/enter_email"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.email}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        tools:ignore="TextFields" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:hint="@string/choose_address"
                        android:importantForAutofill="no"
                        android:onClick="@{v -> presenter.onClickAddress()}"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@{presenter.deliveryAddressCurrent.address}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/address_detail"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_16"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_10"
                        android:background="@drawable/bg_edt"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="@dimen/dp_5"
                        android:paddingVertical="@dimen/dp_10"
                        android:text="@={presenter.deliveryAddressCurrent.addressDetail}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/ln_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/dp_10"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_cancel"
                    android:onClick="@{v -> presenter.onCancelClick()}"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_buy_now"
                    android:onClick="@{v -> presenter.onConfirmClick()}"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/confirm"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    tools:ignore="SpUsage" />
            </LinearLayout>
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>